--- a/index.html
+++ b/index.html
@@ -4,192 +4,183 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TrustivaMarket</title>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+<title>Trustiva Market</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;}
-body{background:#000;color:#fff;font-family:system-ui,-apple-system,sans-serif;overflow-x:hidden}
-
-/* ================= NAVIGATION ================= */
-
-.navbar{
-position:fixed;
-top:0;
-width:100%;
-display:flex;
-justify-content:space-between;
-align-items:center;
-padding:25px 60px;
-z-index:1000;
-background:linear-gradient(to bottom,rgba(0,0,0,0.8),transparent);
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
 }
 
-.nav-left,.nav-right{
-display:flex;
-gap:40px;
-font-size:12px;
-letter-spacing:3px;
+body{
+font-family: "Helvetica Neue", Arial, sans-serif;
+background:#000;
+color:#fff;
+overflow-x:hidden;
 }
 
-.nav-left a,.nav-right a{
-text-decoration:none;
-color:white;
-opacity:0.7;
-transition:0.3s;
-}
-
-.nav-left a:hover,.nav-right a:hover{opacity:1}
-
-.logo{
-font-size:28px;
-letter-spacing:6px;
-font-weight:600;
-}
-
-/* ================= HERO ================= */
+/* ===== Background ===== */
 
 .hero{
 position:relative;
 height:100vh;
-background:url("space.jpg") center/cover no-repeat;
+width:100%;
+background:url("space.jpg") center center / cover no-repeat;
 display:flex;
+flex-direction:column;
 justify-content:center;
 align-items:center;
 text-align:center;
 overflow:hidden;
 }
 
-.hero::before{
+.hero::after{
 content:"";
 position:absolute;
-inset:0;
-background:radial-gradient(circle at center,rgba(0,0,0,0.2),rgba(0,0,0,0.8));
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:radial-gradient(circle at center, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.8) 70%);
+z-index:1;
 }
 
-.hero-content{
-position:relative;
-z-index:10;
-max-width:900px;
-padding:20px;
-}
+/* ===== Navigation ===== */
 
-.data-strip{
-font-size:13px;
-letter-spacing:4px;
-opacity:0.7;
-margin-bottom:25px;
-}
-
-.main-title{
-font-size:clamp(40px,6vw,80px);
-letter-spacing:4px;
-margin-bottom:20px;
-}
-
-.subtext{
-opacity:0.8;
-margin-top:10px;
-}
-
-.cta{
-margin-top:35px;
-padding:14px 40px;
-background:#fff;
-color:#000;
-border:none;
+.nav{
+position:absolute;
+top:0;
+width:100%;
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:25px 60px;
+z-index:5;
 font-size:13px;
 letter-spacing:2px;
-cursor:pointer;
+}
+
+.nav-left,
+.nav-right{
+display:flex;
+gap:35px;
+}
+
+.nav a{
+text-decoration:none;
+color:#ccc;
 transition:0.3s;
 }
 
-.cta:hover{background:#ddd}
+.nav a:hover{
+color:#fff;
+}
 
-/* ================= SHIPS ================= */
+.logo{
+position:absolute;
+left:50%;
+transform:translateX(-50%);
+font-size:22px;
+letter-spacing:8px;
+font-weight:300;
+}
 
-.ship-left,
-.ship-right{
+/* ===== Ships ===== */
+
+.ship{
 position:absolute;
 width:420px;
 opacity:0;
-z-index:5;
-will-change:transform;
+z-index:2;
+transition:transform 3s ease-out, opacity 2s ease-out;
 }
 
 .ship-left{
 left:-450px;
-bottom:-250px;
-transform:scale(0.3) rotate(18deg);
+top:20%;
+transform:rotate(-12deg);
 }
 
 .ship-right{
 right:-450px;
-top:-250px;
-transform:scale(0.3) rotate(-18deg);
+top:55%;
+transform:rotate(12deg);
 }
 
-/* ================= SECTIONS ================= */
-
-section{
-padding:140px 10%;
-text-align:center;
+.ship.active-left{
+transform:translateX(500px) rotate(-12deg);
+opacity:1;
 }
 
-section h2{
-font-size:34px;
+.ship.active-right{
+transform:translateX(-500px) rotate(12deg);
+opacity:1;
+}
+
+/* ===== Text Content ===== */
+
+.content{
+position:relative;
+z-index:3;
+max-width:1000px;
+padding:0 20px;
+}
+
+.small{
+font-size:12px;
+letter-spacing:4px;
+color:#aaa;
+margin-bottom:20px;
+}
+
+.hero-title{
+font-size:64px;
+font-weight:200;
+letter-spacing:6px;
+line-height:1.2;
+margin-bottom:20px;
+}
+
+.sub{
+font-size:16px;
+color:#bbb;
+margin-bottom:30px;
+}
+
+.btn{
+padding:15px 40px;
+background:#fff;
+color:#000;
+border:none;
+font-size:13px;
 letter-spacing:3px;
-margin-bottom:25px;
+cursor:pointer;
+transition:0.3s;
 }
 
-section p{
-max-width:750px;
-margin:auto;
-opacity:0.7;
-line-height:1.7;
+.btn:hover{
+background:#ddd;
 }
 
-.features{
-display:flex;
-flex-wrap:wrap;
-justify-content:center;
-gap:40px;
-margin-top:60px;
-}
+/* ===== Responsive ===== */
 
-.card{
-background:rgba(255,255,255,0.05);
-padding:40px;
-width:260px;
-border-radius:10px;
-transition:0.4s;
+@media(max-width:900px){
+.hero-title{
+font-size:40px;
 }
-
-.card:hover{
-transform:translateY(-10px);
-background:rgba(255,255,255,0.08);
+.ship{
+width:250px;
 }
-
-footer{
-padding:80px;
-text-align:center;
-background:#050505;
-opacity:0.6;
-}
-
-@media(max-width:768px){
-.nav-left,.nav-right{display:none}
-.ship-left,.ship-right{width:200px}
 }
 </style>
 </head>
-
 <body>
 
-<!-- NAVIGATION -->
-<div class="navbar">
+<section class="hero">
+
+<!-- Navigation -->
+<div class="nav">
 <div class="nav-left">
 <a href="#">BROWSE</a>
 <a href="#">HOW IT WORKS</a>
@@ -205,147 +196,74 @@ opacity:0.6;
 </div>
 </div>
 
-<!-- HERO -->
-<section class="hero">
+<!-- Ships -->
+<img src="shift-left.png" class="ship ship-left">
+<img src="shift-right.png" class="ship ship-right">
 
-<img src="shift-left.png" class="ship-left">
-<img src="shift-right.png" class="ship-right">
+<!-- Text -->
+<div class="content">
+<div class="small" id="scrambleSmall">ACCESSING DIGITAL MARKETPLACE</div>
 
-<div class="hero-content">
-<div class="data-strip" id="scramble">INITIALIZING MARKETPLACE...</div>
-
-<div class="main-title">
-Buy & Sell Digital Businesses
+<div class="hero-title" id="scrambleTitle">
+BUY & SELL<br>DIGITAL BUSINESSES
 </div>
 
-<div class="subtext">
+<div class="sub">
 AI-powered marketplace for verified revenue-generating online assets.
 </div>
 
-<button class="cta">BROWSE LISTINGS</button>
+<button class="btn">BROWSE LISTINGS</button>
 </div>
 
 </section>
-
-<!-- TRUST STRIP -->
-<section>
-<h2>Secure. Verified. Scalable.</h2>
-<p>
-Escrow protection, AI valuation engine, fraud detection and smooth ownership transfers — 
-built for serious founders and investors.
-</p>
-</section>
-
-<!-- FEATURES -->
-<section>
-<h2>Why Trustiva</h2>
-
-<div class="features">
-<div class="card">🔒 Secure Escrow Protection</div>
-<div class="card">📊 Verified Revenue Metrics</div>
-<div class="card">🤖 AI-Powered Valuation</div>
-<div class="card">⚡ Fast Asset Transfers</div>
-</div>
-</section>
-
-<!-- HOW IT WORKS -->
-<section>
-<h2>How It Works</h2>
-<p>
-Browse verified listings, complete secure payment through escrow,
-and receive full digital ownership transfer with support.
-</p>
-</section>
-
-<!-- FINAL CTA -->
-<section>
-<h2>Ready To Launch?</h2>
-<p>Your next digital asset is waiting in the universe.</p>
-<button class="cta">START YOUR MISSION</button>
-</section>
-
-<footer>
-© 2026 TrustivaMarket. All Rights Reserved.
-</footer>
 
 <script>
-gsap.registerPlugin(ScrollTrigger);
 
-/* SCRAMBLE EFFECT */
-function scrambleText(element, text) {
-const letters="ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-let iteration=0;
+/* ===== Ship Animation ===== */
+window.onload = function(){
+setTimeout(()=>{
+document.querySelector(".ship-left").classList.add("active-left");
+document.querySelector(".ship-right").classList.add("active-right");
+},500);
+}
 
-const interval=setInterval(()=>{
-element.innerText=text
+/* ===== Scramble Effect ===== */
+
+function scrambleText(element, finalText, speed=40){
+let chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+let iterations = 0;
+
+let interval = setInterval(() => {
+element.innerHTML = finalText
 .split("")
-.map((letter,index)=>{
-if(index<iteration){return text[index]}
-return letters[Math.floor(Math.random()*26)]
+.map((letter, index)=>{
+if(index < iterations){
+return finalText[index];
+}
+return chars[Math.floor(Math.random() * chars.length)];
 })
 .join("");
 
-if(iteration>=text.length){clearInterval(interval)}
-iteration+=1/2;
-},40);
+if(iterations >= finalText.length){
+clearInterval(interval);
 }
 
-scrambleText(document.getElementById("scramble"),"ACCESSING DIGITAL MARKETPLACE");
-
-/* DIAGONAL CINEMATIC ENTRY */
-
-gsap.to(".ship-left",{
-x:700,
-y:-250,
-scale:1,
-rotate:0,
-opacity:1,
-duration:4.5,
-ease:"power4.out"
-});
-
-gsap.to(".ship-right",{
-x:-700,
-y:250,
-scale:1,
-rotate:0,
-opacity:1,
-duration:4.5,
-delay:0.3,
-ease:"power4.out"
-});
-
-/* SUBTLE FLOAT */
-
-gsap.to(".ship-left",{
-y:"+=20",
-repeat:-1,
-yoyo:true,
-duration:5,
-ease:"sine.inOut"
-});
-
-gsap.to(".ship-right",{
-y:"-=20",
-repeat:-1,
-yoyo:true,
-duration:5,
-ease:"sine.inOut"
-});
-
-/* SCROLL FADE */
-
-gsap.utils.toArray("section").forEach(section=>{
-gsap.from(section,{
-opacity:0,
-y:80,
-duration:1.4,
-scrollTrigger:{
-trigger:section,
-start:"top 85%"
+iterations += 1/2;
+}, speed);
 }
-});
-});
+
+scrambleText(
+document.getElementById("scrambleTitle"),
+"BUY & SELL\nDIGITAL BUSINESSES",
+30
+);
+
+scrambleText(
+document.getElementById("scrambleSmall"),
+"ACCESSING DIGITAL MARKETPLACE",
+40
+);
+
 </script>
 
 </body>
