--- a/index.html
+++ b/index.html
@@ -7,182 +7,180 @@
 <title>Trustiva Market</title>
 
 <style>
-
-/* RESET */
 *{
-margin:0;
-padding:0;
-box-sizing:border-box;
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
 
 body{
-font-family:Arial, Helvetica, sans-serif;
-background:#000;
-color:#fff;
-overflow-x:hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  background:black;
+  overflow-x:hidden;
+  color:white;
 }
 
-/* HERO BACKGROUND */
+/* ================= BACKGROUND ================= */
+
 .hero{
-position:relative;
-height:100vh;
-width:100%;
-background:url("space.jpg") center/cover no-repeat;
-display:flex;
-flex-direction:column;
-align-items:center;
-justify-content:center;
-text-align:center;
-overflow:hidden;
+  position:relative;
+  height:100vh;
+  width:100%;
+  background:url("space.jpg") center center / cover no-repeat;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
 }
 
-/* DARK OVERLAY */
+/* Dark cinematic overlay */
 .hero::after{
-content:"";
-position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:rgba(0,0,0,0.55);
-z-index:1;
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0.4));
 }
 
-/* LOGO */
+/* ================= LOGO ================= */
+
 .logo{
-position:absolute;
-top:30px;
-left:50%;
-transform:translateX(-50%);
-letter-spacing:6px;
-font-size:28px;
-font-weight:600;
-z-index:3;
+  position:relative;
+  margin-top:25px;
+  font-size:32px;
+  letter-spacing:10px;
+  z-index:2;
 }
 
-/* NAVIGATION */
-.nav{
-position:absolute;
-top:80px;
-left:50%;
-transform:translateX(-50%);
-display:flex;
-gap:40px;
-z-index:3;
-font-size:13px;
-letter-spacing:2px;
+/* ================= NAVIGATION ================= */
+
+.navbar{
+  position:relative;
+  margin-top:20px;
+  display:flex;
+  gap:40px;
+  z-index:2;
+  font-size:13px;
+  letter-spacing:3px;
 }
 
-.nav a{
-color:#ddd;
-text-decoration:none;
-transition:0.3s;
+.navbar a{
+  color:white;
+  text-decoration:none;
+  opacity:0.8;
+  transition:0.3s;
 }
 
-.nav a:hover{
-color:#fff;
+.navbar a:hover{
+  opacity:1;
 }
 
-/* CENTER CONTENT */
-.content{
-position:relative;
-z-index:3;
-max-width:900px;
-padding:0 20px;
+/* ================= CENTER CONTENT ================= */
+
+.center-content{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  text-align:center;
+  z-index:2;
+  width:90%;
+  max-width:900px;
 }
 
-.tagline{
-letter-spacing:4px;
-font-size:12px;
-opacity:0.7;
-margin-bottom:20px;
+.small-text{
+  font-size:12px;
+  letter-spacing:4px;
+  opacity:0.7;
+  margin-bottom:20px;
 }
 
-h1{
-font-size:48px;
-font-weight:500;
-letter-spacing:1px;
-margin-bottom:20px;
+.main-title{
+  font-size:48px;
+  font-weight:300;
+  margin-bottom:20px;
 }
 
-.subtext{
-opacity:0.8;
-margin-bottom:30px;
+.sub-text{
+  font-size:16px;
+  opacity:0.8;
+  margin-bottom:30px;
 }
 
 .btn{
-padding:14px 32px;
-background:#fff;
-color:#000;
-text-decoration:none;
-font-size:13px;
-letter-spacing:2px;
-transition:0.3s;
-display:inline-block;
+  padding:14px 32px;
+  background:white;
+  color:black;
+  text-decoration:none;
+  font-size:13px;
+  letter-spacing:2px;
+  display:inline-block;
+  transition:0.3s;
 }
 
 .btn:hover{
-background:#ddd;
+  background:#ddd;
 }
 
-/* SHIPS */
-.ship-left{
-position:absolute;
-left:-400px;
-top:50%;
-width:420px;
-transform:translateY(-50%) rotate(-12deg);
-animation:leftFly 3.5s ease forwards;
-z-index:2;
-}
+/* ================= SHIPS ================= */
 
+.ship-left,
 .ship-right{
-position:absolute;
-right:-400px;
-top:55%;
-width:380px;
-transform:translateY(-50%) rotate(12deg);
-animation:rightFly 3.5s ease forwards;
-z-index:2;
+  position:absolute;
+  width:420px;
+  opacity:0;
+  z-index:1;
 }
 
-@keyframes leftFly{
-to{
-left:-120px;
-}
-}
-
-@keyframes rightFly{
-to{
-right:-120px;
-}
-}
-
-/* RESPONSIVE */
-@media(max-width:768px){
-
-h1{
-font-size:30px;
-}
-
-.nav{
-gap:15px;
-font-size:11px;
-flex-wrap:wrap;
-justify-content:center;
-}
-
+/* LEFT ship comes diagonally inward */
 .ship-left{
-width:250px;
-left:-250px;
+  left:-450px;
+  bottom:80px;
+  transform:rotate(15deg);
+  animation:leftShip 2.5s ease-out forwards;
 }
 
+/* RIGHT ship comes diagonally inward */
 .ship-right{
-width:250px;
-right:-250px;
-}
+  right:-450px;
+  bottom:80px;
+  transform:rotate(-15deg);
+  animation:rightShip 2.5s ease-out forwards;
 }
 
+@keyframes leftShip{
+  to{
+    left:-60px;
+    opacity:1;
+  }
+}
+
+@keyframes rightShip{
+  to{
+    right:-60px;
+    opacity:1;
+  }
+}
+
+/* ================= RESPONSIVE ================= */
+
+@media(max-width:900px){
+
+  .main-title{
+    font-size:30px;
+  }
+
+  .ship-left,
+  .ship-right{
+    width:250px;
+  }
+
+  .ship-left{
+    left:-260px;
+  }
+
+  .ship-right{
+    right:-260px;
+  }
+
+}
 </style>
 </head>
 
@@ -190,57 +188,64 @@ right:-250px;
 
 <section class="hero">
 
-<div class="logo">TRUSTIVA</div>
+  <!-- LOGO -->
+  <div class="logo">TRUSTIVA</div>
 
-<div class="nav">
-<a href="#">BROWSE</a>
-<a href="#">HOW IT WORKS</a>
-<a href="#">SELLERS</a>
-<a href="#">PRICING</a>
-<a href="#">SIGN IN</a>
-<a href="#">LIST WEBSITE</a>
-</div>
+  <!-- NAVIGATION -->
+  <div class="navbar">
+    <a href="#">BROWSE</a>
+    <a href="#">HOW IT WORKS</a>
+    <a href="#">SELLERS</a>
+    <a href="#">PRICING</a>
+    <a href="#">SIGN IN</a>
+    <a href="#">LIST WEBSITE</a>
+  </div>
 
-<img src="shift-left.png" class="ship-left">
-<img src="shift-right.png" class="ship-right">
+  <!-- CENTER CONTENT -->
+  <div class="center-content">
+    <div class="small-text">ACCESSING DIGITAL MARKETPLACE</div>
+    <div class="main-title" id="scramble">
+      Buy & Sell Digital Businesses
+    </div>
+    <div class="sub-text">
+      AI-powered marketplace for verified revenue-generating online assets.
+    </div>
+    <a href="#" class="btn">BROWSE LISTINGS</a>
+  </div>
 
-<div class="content">
-<div class="tagline">ACCESSING DIGITAL MARKETPLACE</div>
-<h1 id="mainText">Buy & Sell Digital Businesses</h1>
-<div class="subtext">
-AI-powered marketplace for verified revenue-generating online assets.
-</div>
-<a href="#" class="btn">BROWSE LISTINGS</a>
-</div>
+  <!-- SHIPS -->
+  <img src="ship-left.png" class="ship-left">
+  <img src="ship-right.png" class="ship-right">
 
 </section>
 
 <script>
+/* ================= SCRAMBLE EFFECT (EVE STYLE) ================= */
 
-/* SCRAMBLE EFFECT */
-const text = "Buy & Sell Digital Businesses";
-const el = document.getElementById("mainText");
-const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+const el = document.getElementById("scramble");
+const originalText = el.textContent;
+const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890";
 let iteration = 0;
 
-const interval = setInterval(() => {
-el.innerText = text
-.split("")
-.map((letter, index) => {
-if(index < iteration){
-return text[index];
+function scramble(){
+  el.textContent = originalText
+    .split("")
+    .map((letter, index) => {
+      if(index < iteration){
+        return originalText[index];
+      }
+      return letters[Math.floor(Math.random() * letters.length)];
+    })
+    .join("");
+
+  if(iteration >= originalText.length){
+    clearInterval(interval);
+  }
+
+  iteration += 0.5;
 }
-return letters[Math.floor(Math.random()*26)];
-})
-.join("");
 
-if(iteration >= text.length){
-clearInterval(interval);
-}
-
-iteration += 1/2;
-},30);
-
+let interval = setInterval(scramble, 30);
 </script>
 
 </body>
